--- a/src/ECom-WebApp/Components/App.razor
+++ b/src/ECom-WebApp/Components/App.razor
@@ -15,6 +15,8 @@
 <body>
     <Routes />
     <script src="_framework/blazor.web.js"></script>
+    <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="bootstrap/js/popper.min.js"></script>
     <script src="bootstrap/js/bootstrap.min.js" ></script>
 </body>
 
