--- a/src/ECom-WebApp/Components/Layout/NavMenu.razor
+++ b/src/ECom-WebApp/Components/Layout/NavMenu.razor
@@ -1,1 +1,45 @@
-﻿
+﻿<nav class="navbar navbar-expand-lg">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+            <img src="/images/logo.png" alt="CloudKitchen" width="50" height="50" />
+        </a>
+        <button class="navbar-toggler shadow-none border-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="sidebar offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+            <div class="offcanvas-header text-white border-bottom">
+                <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
+                <button type="button" class="btn-close btn-close-white shadow-none" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body d-flex flex-column flex-lg-row p-4 p-lg-3">
+                <ul class="navbar-nav justify-content-center align-items-center fs-5 flex-grow-1 pe-3">
+                    <li class="nav-item">
+                        <a class="nav-link active mx-2 fw-bold" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link mx-2 fw-bold" href="#">About</a>
+                    </li>
+                    <li class="nav-item fw-bold dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Join Here
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Home Cook</a></li>
+                            <li><a class="dropdown-item" href="#">Delivery Partner</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link mx-2 fw-bold" href="#">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link mx-2 fw-bold" href="#">Faq</a>
+                    </li>
+                </ul>
+                <div class="header-btn d-flex flex-column flex-lg-row justify-content-center align-items-center gap-3 fs-6">
+                    <a href="#" class="login text-black fw-bold">Login</a>
+                    <a href="#" class="signUp btn-primary text-white text-decoration-none px-3 py-1 rounded-4 fw-bold">Sign Up</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</nav>
