--- a/src/ECom-WebApp/wwwroot/app.css
+++ b/src/ECom-WebApp/wwwroot/app.css
@@ -8,7 +8,7 @@ a, .btn-link {
 
 .btn-primary {
     color: #fff;
-    background-color: #1b6ec2;
+    background-color: #f94ca4;
     border-color: #1861ac;
 }
 
